Sculpt paint tool crash to desktop with multiresolution modifier #97469

Closed
opened 2022-04-20 12:18:29 +02:00 by Daniel Darley · 8 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.76

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-19 22:08, hash: 6a3c3c77b3
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender immediately crashes to desktop when attempting to sculpt/paint an object (default cube) with multires modifier.

Exact steps for others to reproduce the error
Add multires modifier to default cube and subdivide once.
Sculpt mode then paint.
Exit to decktop upon first click on object.

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.76 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-19 22:08, hash: `6a3c3c77b3` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender immediately crashes to desktop when attempting to sculpt/paint an object (default cube) with multires modifier. **Exact steps for others to reproduce the error** Add multires modifier to default cube and subdivide once. Sculpt mode then paint. Exit to decktop upon first click on object.
Author

Added subscriber: @Fuzzwhoppit

Added subscriber: @Fuzzwhoppit
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check...

Can confirm, will check...
Philipp Oeser changed title from Sculpt paint crash to desktop with multiresolution modifier to Sculpt paint tool crash to desktop with multiresolution modifier 2022-04-20 13:23:37 +02:00
Member

Added subscribers: @JulienKaspar, @JosephEagar

Added subscribers: @JulienKaspar, @JosephEagar
Member
CC @JosephEagar CC @JulienKaspar

This issue was referenced by 6f190f7f43

This issue was referenced by 6f190f7f43bb6c4a2c9dc52fdaae2dacf10f1d24
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-04-21 08:39:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97469
No description provided.